[package]
name = "downall"
version = "0.1.0"
edition = "2021"
description = "Bulk downloading files"

[dependencies]
anyhow = "1.0.89"
backon = "1.2.0"
bytes = "1.7.2"
clap = { version = "4.5.18", features = ["derive"] }
lazy-regex = "3.3.0"
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
